# word_count

./: CMakeLists.txt  README.md  in.txt  main.cpp
data_out/: result_by_name.txt  result_by_number.txt
inc/: read_write.hpp  sort.hpp  t_queue.h  time.hpp
lib/: read_write.cpp  sort.cpp  time.cpp
src/: main.cpp
